log
Sun 17 Sep 2023 10:27:24 PM UTC: 
 treemap.c | 60 +++++++++++++++++++++++-------------------------------------
 1 file changed, 23 insertions(+), 37 deletions(-)
 tests:  4|7
total_score: 5/70
4069d0c
Sun 17 Sep 2023 10:48:25 PM UTC: 
 treemap.c | 28 ++++++++++++++++++++++++++--
 1 file changed, 26 insertions(+), 2 deletions(-)
In file included from test.c:4:
treemap.c: In function ‘searchTreeNode’:
treemap.c:82:1: error: control reaches end of non-void function [-Werror=return-type]
   82 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
0e1aa58
Sun 17 Sep 2023 10:49:08 PM UTC: 
 treemap.c | 3 +++
 1 file changed, 3 insertions(+)
 tests:  4|7
total_score: 5/70
3cb4e25
Sun 17 Sep 2023 10:52:31 PM UTC: 
 treemap.c | 10 +++++++---
 1 file changed, 7 insertions(+), 3 deletions(-)
 tests:  0|0
a51c250
Sun 17 Sep 2023 10:53:43 PM UTC: 
 treemap.c | 3 +++
 1 file changed, 3 insertions(+)
 tests:  4|7
total_score: 5/70
61c2d9b
Sun 17 Sep 2023 11:06:27 PM UTC: 
 treemap.c | 61 +++++++++++++++++++++++++++++++++++++++++++------------------
 1 file changed, 43 insertions(+), 18 deletions(-)
 tests:  4|7
total_score: 5/70
93b3be1
Sun 17 Sep 2023 11:11:36 PM UTC: 
 treemap.c | 2 --
 1 file changed, 2 deletions(-)
 tests:  4|7
total_score: 5/70
7aa520f
Sun 17 Sep 2023 11:13:32 PM UTC: 
 treemap.c | 2 ++
 1 file changed, 2 insertions(+)
In file included from test.c:4:
treemap.c: In function ‘searchTreeNode’:
treemap.c:55:12: error: format ‘%i’ expects argument of type ‘int’, but argument 2 has type ‘void *’ [-Werror=format=]
   55 |   printf("%i\n", node->pair->key);
      |           ~^     ~~~~~~~~~~~~~~~
      |            |               |
      |            int             void *
      |           %p
cc1: all warnings being treated as errors
Compilation failed
3eb0360
Sun 17 Sep 2023 11:19:18 PM UTC: 
 treemap.c | 16 +++++++---------
 1 file changed, 7 insertions(+), 9 deletions(-)
In file included from test.c:4:
treemap.c: In function ‘insertTreeMap’:
treemap.c:85:39: error: passing argument 1 of ‘searchTreeNode’ from incompatible pointer type [-Werror=incompatible-pointer-types]
   85 |   TreeNode* temp = searchTreeNode(tree->root, key);
      |                                   ~~~~^~~~~~
      |                                       |
      |                                       TreeNode *
treemap.c:50:35: note: expected ‘TreeMap *’ but argument is of type ‘TreeNode *’
   50 | TreeNode* searchTreeNode(TreeMap* tree, TreeNode* node, void* key)
      |                          ~~~~~~~~~^~~~
treemap.c:85:20: error: too few arguments to function ‘searchTreeNode’
   85 |   TreeNode* temp = searchTreeNode(tree->root, key);
      |                    ^~~~~~~~~~~~~~
treemap.c:50:11: note: declared here
   50 | TreeNode* searchTreeNode(TreeMap* tree, TreeNode* node, void* key)
      |           ^~~~~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
97b0c8e
Sun 17 Sep 2023 11:19:42 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  6|7
total_score: 5/70
98806df
Sun 17 Sep 2023 11:25:28 PM UTC: 
 treemap.c | 18 +++++++++---------
 1 file changed, 9 insertions(+), 9 deletions(-)
In file included from test.c:4:
treemap.c: In function ‘insertNode’:
treemap.c:73:40: error: passing argument 1 of ‘tree->lower_than’ makes pointer from integer without a cast [-Werror=int-conversion]
   73 |   if (tree->lower_than(node->pair->key < new->pair->key) == 1)
      |                        ~~~~~~~~~~~~~~~~^~~~~~~~~~~~~~~~
      |                                        |
      |                                        int
treemap.c:73:40: note: expected ‘void *’ but argument is of type ‘int’
treemap.c:73:7: error: too few arguments to function ‘tree->lower_than’
   73 |   if (tree->lower_than(node->pair->key < new->pair->key) == 1)
      |       ^~~~
cc1: all warnings being treated as errors
Compilation failed
e752f6b
Sun 17 Sep 2023 11:25:51 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  6|7
total_score: 5/70
e465556
Sun 17 Sep 2023 11:29:04 PM UTC: 
 treemap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|0
11eab98
Sun 17 Sep 2023 11:30:30 PM UTC: 
 treemap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  6|7
total_score: 5/70
152f9ee
Sun 17 Sep 2023 11:30:51 PM UTC: 
 treemap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|0
142ed24
Sun 17 Sep 2023 11:31:25 PM UTC: 
 treemap.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
 tests:  0|0
ea8b434
Sun 17 Sep 2023 11:39:20 PM UTC: 
 treemap.c | 22 ++++++++++++----------
 1 file changed, 12 insertions(+), 10 deletions(-)
 tests:  0|0
6e2d43b
Mon 18 Sep 2023 12:25:38 AM UTC: 
 treemap.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
 tests:  0|0
db5d68f
Mon 18 Sep 2023 12:26:31 AM UTC: 
 treemap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  8|6
total_score: 5/70
7342055
Mon 18 Sep 2023 12:28:15 AM UTC: 
 treemap.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
 tests:  10|6
total_score: 5/70
0cf1d91
Mon 18 Sep 2023 12:28:38 AM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  8|6
total_score: 5/70
76753e2
Mon 18 Sep 2023 12:29:57 AM UTC: 
 treemap.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
 tests:  0|0
1993d68
Mon 18 Sep 2023 12:35:13 AM UTC: 
 treemap.c | 13 ++++---------
 1 file changed, 4 insertions(+), 9 deletions(-)
 tests:  0|0
88ad541
Mon 18 Sep 2023 12:36:38 AM UTC: 
 treemap.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  13|5
total_score: 15/70
d4b31f0
Mon 18 Sep 2023 12:40:24 AM UTC: 
 treemap.c | 9 +++------
 1 file changed, 3 insertions(+), 6 deletions(-)
 tests:  0|0
Mon 18 Sep 2023 12:42:34 AM UTC: 
 treemap.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  0|0
cdf9ab3
